fix: - improve code readability - add translation to explicit condition - clean scss - correct a bug that remove the values from the range input

--- a/src/app/modules/analytics-config/components/edit-resultlist-visualisation/result-list-visualisation.component.scss
+++ b/src/app/modules/analytics-config/components/edit-resultlist-visualisation/result-list-visualisation.component.scss
@@ -16,6 +16,9 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+
+@import "variables";
+
 :host {
   display: block;
   height: 100%;
@@ -40,7 +43,7 @@
 .table-container {
   width: 100%;
   height: 500px;
-  margin-top: 16px;
+  margin-top: $default-spacing;
   overflow-y: auto;
 }
 
